--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ tagline: This is our life's work
 # Longer descriptions for link previews (<250 characters)
 description: 'The field of neuroscience is constantly expanding and exciting advancements are being made constantly. As such, Temple University supports an interdisciplinary approach to this field of study. More information can be found at the by following the links to each college's neuroscience program.'
 # List of related keywords for search engines
-keywords: highered, college, university, philadelphia, Temple, data, microdata, big data, research
+keywords: highered, university, philadelphia, Temple, neuroscience programs
 
 # Address
 address:
