--- a/_config.yml
+++ b/_config.yml
@@ -43,11 +43,11 @@ college:
 social:
   # Facebook - https://facebook.com/USERNAME
   # if your page does not have a custom URL, create one!
-  facebook: TempleU
+  facebook:
   # Twitter - https://twitter.com/USERNAME
-  twitter: TempleUniv
+  twitter: 
   # Instagram - https://www.instagram.com/USERNAME
-  instagram: TempleUniv
+  instagram: 
   # Snapchat - USERNAME
   snapchat:
   # GitHub - https://github.com/USERNAME or https://github.com/USERNAME/REPO
