--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 # Program/Department Title
-title: Temple-Neuroscience
+title: Temple Neuroscience
 # Subdirectory (with / at only at beginning)
 baseurl: /temple-neuroscience
 # Production domain (without / at the end)
