--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ description: 'The field of neuroscience is constantly expanding and exciting adv
 keywords: highered, university, philadelphia, Temple, neuroscience programs
 
 # Address
-address: 1801 
-  building: 
+address: 
+  building: 1801 
   room: 
   street: North Broad Street
   city: Phialdelphia, PA 19122
