--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,11 @@ university:
 social:
   # Facebook - https://facebook.com/USERNAME
   # if your page does not have a custom URL, create one!
-  facebook: TempleLiberalArts
+  facebook: TempleUniv
   # Twitter - https://twitter.com/USERNAME
-  twitter: TULiberalArts
+  twitter: TempleUniv
   # Instagram - https://www.instagram.com/USERNAME
-  instagram: TULiberalArts
+  instagram: TempleUniv
   # Snapchat - USERNAME
   snapchat:
   # GitHub - https://github.com/USERNAME or https://github.com/USERNAME/REPO
