--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ university:
 social:
   # Facebook - https://facebook.com/USERNAME
   # if your page does not have a custom URL, create one!
-  facebook: TempleUniv
+  facebook: templeu
   # Twitter - https://twitter.com/USERNAME
   twitter: TempleUniv
   # Instagram - https://www.instagram.com/USERNAME
