removed Twitter link that is failing

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
   # if your page does not have a custom URL, create one!
   facebook: templeu
   # Twitter - https://twitter.com/USERNAME
-  twitter: TempleUniv
+  twitter: 
   # Instagram - https://www.instagram.com/USERNAME
   instagram: TempleUniv
   # Snapchat - USERNAME
